fix(advanced_layout): layout is responsive to filling and resizing of window, red boxes fill space automatically, header gap removed, padding added to header

--- a/Week06/Day4/exercise4/advanced_layout.css
+++ b/Week06/Day4/exercise4/advanced_layout.css
@@ -1,12 +1,12 @@
 .container {
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, minmax(200px, auto));
     grid-gap: 5px;
-    width: 70%;
-    margin: auto;
-    grid-template-areas: 'header header header'
-                         'first second second'
+    width: 90%;
+    min-height: 600px;
+    margin: 85px auto 0 auto;
+    grid-template-areas: 'first second second'
                          'third filledone filledtwo'
                          'footer footer footer'
 
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center; 
+    padding-left: 30px;
 }
 
 .navigation {
@@ -34,7 +35,7 @@
 
 .box {
     background-color: green;
-    height: 220px;
+    padding: 20px;
 }
 
 .first {
@@ -65,8 +66,8 @@
 
 .red {
     background-color: red;
-    width: 60%;
-    height: 160px;
+    width: 100%;
+    height: 100%;
 }
 
 .footer {
